// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterProvider should render for lock when power is on but user logged out 1`] = `
<div>
  <div
    aria-label="static-host-screen"
    class="css-0"
  >
    <div
      class="css-0"
    >
      <div
        class="css-1q3b9iq"
      >
        <img
          aria-label="wallpaper-component-with-wallpaper7"
          class="chakra-image css-uwwqev"
          loading="lazy"
          src=""
        />
      </div>
      <div
        aria-label="top-right-component"
        class="css-sikaw0"
      >
        <button
          aria-controls="popover-content-:r1:"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="keyboard-icon-button"
          class="chakra-button css-117sk0y"
          id="popover-trigger-:r1:"
          type="button"
        >
          ABC - India
          <span
            class="chakra-button__icon css-1hzyiq5"
          >
            <svg
              aria-hidden="true"
              aria-label="keyboard-icon"
              color="white"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M14 5a1 1 0 011 1v5a1 1 0 01-1 1H2a1 1 0 01-1-1V6a1 1 0 011-1h12zM2 4a2 2 0 00-2 2v5a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2H2z"
              />
              <path
                d="M13 10.25a.25.25 0 01.25-.25h.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-.5a.25.25 0 01-.25-.25v-.5zm0-2a.25.25 0 01.25-.25h.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-.5a.25.25 0 01-.25-.25v-.5zm-5 0A.25.25 0 018.25 8h.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-.5A.25.25 0 018 8.75v-.5zm2 0a.25.25 0 01.25-.25h1.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-1.5a.25.25 0 01-.25-.25v-.5zm1 2a.25.25 0 01.25-.25h.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-.5a.25.25 0 01-.25-.25v-.5zm-5-2A.25.25 0 016.25 8h.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-.5A.25.25 0 016 8.75v-.5zm-2 0A.25.25 0 014.25 8h.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-.5A.25.25 0 014 8.75v-.5zm-2 0A.25.25 0 012.25 8h.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-.5A.25.25 0 012 8.75v-.5zm11-2a.25.25 0 01.25-.25h.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-.5a.25.25 0 01-.25-.25v-.5zm-2 0a.25.25 0 01.25-.25h.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-.5a.25.25 0 01-.25-.25v-.5zm-2 0A.25.25 0 019.25 6h.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-.5A.25.25 0 019 6.75v-.5zm-2 0A.25.25 0 017.25 6h.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-.5A.25.25 0 017 6.75v-.5zm-2 0A.25.25 0 015.25 6h.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-.5A.25.25 0 015 6.75v-.5zm-3 0A.25.25 0 012.25 6h1.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-1.5A.25.25 0 012 6.75v-.5zm0 4a.25.25 0 01.25-.25h.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-.5a.25.25 0 01-.25-.25v-.5zm2 0a.25.25 0 01.25-.25h5.5a.25.25 0 01.25.25v.5a.25.25 0 01-.25.25h-5.5a.25.25 0 01-.25-.25v-.5z"
              />
            </svg>
          </span>
        </button>
        <svg
          aria-label="battery-icon"
          color="white"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2 6h6.7v4H2V6z"
          />
          <path
            d="M2 4a2 2 0 00-2 2v4a2 2 0 002 2h10a2 2 0 002-2V6a2 2 0 00-2-2H2zm10 1a1 1 0 011 1v4a1 1 0 01-1 1H2a1 1 0 01-1-1V6a1 1 0 011-1h10zm4 3a1.5 1.5 0 01-1.5 1.5v-3A1.5 1.5 0 0116 8z"
          />
        </svg>
        <svg
          aria-label="wifi-icon"
          color="white"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 21l3.6-4.8c-1-.75-2.25-1.2-3.6-1.2s-2.6.45-3.6 1.2L12 21m0-18C7.95 3 4.21 4.34 1.2 6.6L3 9c2.5-1.88 5.62-3 9-3s6.5 1.12 9 3l1.8-2.4C19.79 4.34 16.05 3 12 3m0 6c-2.7 0-5.19.89-7.2 2.4l1.8 2.4C8.1 12.67 9.97 12 12 12c2.03 0 3.9.67 5.4 1.8l1.8-2.4C17.19 9.89 14.7 9 12 9z"
          />
        </svg>
      </div>
      <div
        aria-label="time-date-component"
        class="css-1ludagc"
      >
        <p
          class="chakra-text css-8dqgwl"
        >
          Thursday May 14
        </p>
        <p
          class="chakra-text css-5lywel"
        >
          11:01
        </p>
      </div>
      <div
        aria-label="user-login-component"
        class="css-1dvrt7t"
      >
        <button
          aria-label="user-button"
          class="chakra-button css-y5bm5g"
          type="button"
        >
          <img
            alt="Profile"
            class="chakra-image css-13wtmhl"
            loading="lazy"
            src="https://avatars.githubusercontent.com/u/104697219?s=400&u=7ecc539c268755cfe0409ca5863773bb726387ba&v=4"
          />
          <p
            class="chakra-text css-1590av0"
          >
            Amit Raikwar
          </p>
        </button>
        <div
          class="chakra-input__group css-139cpa4"
          data-group="true"
        >
          <input
            aria-label="password-text-input"
            class="chakra-input css-1362yyb"
            maxlength="20"
            placeholder="Enter Password"
            type="password"
            value=""
          />
          <div
            class="chakra-input__right-element css-1ttnbqn"
          >
            <button
              aria-label="login-button"
              class="chakra-button css-15p997s"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M1 8a7 7 0 1014 0A7 7 0 001 8zm15 0A8 8 0 110 8a8 8 0 0116 0zM4.5 7.5a.5.5 0 000 1h5.793l-2.147 2.146a.5.5 0 00.708.708l3-3a.5.5 0 000-.708l-3-3a.5.5 0 10-.708.708L10.293 7.5H4.5z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <p
          class="chakra-text css-1ahyq4l"
        >
          Touch ID or Enter password
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`RouterProvider should render for power off 1`] = `
<div>
  <div
    aria-label="static-host-screen"
    class="css-0"
  >
    <div
      aria-label="power-screen"
      class="css-vx62js"
    >
      <div
        style="color: rgb(255, 255, 255);"
      >
        <svg
          height="100"
          viewBox="0 0 842 1000"
          width="84"
          xmlns="http://www.w3.org/2000/svg"
        >
          
      
          <path
            d="M824.666 779.304c-15.123 34.937-33.023 67.096-53.763 96.663-28.271 40.308-51.419 68.208-69.258 83.702-27.653 25.43-57.282 38.455-89.01 39.196-22.776 0-50.245-6.481-82.219-19.63-32.08-13.085-61.56-19.566-88.516-19.566-28.27 0-58.59 6.48-91.022 19.567-32.48 13.148-58.646 20-78.652 20.678-30.425 1.296-60.75-12.098-91.022-40.245-19.32-16.852-43.486-45.74-72.436-86.665-31.06-43.702-56.597-94.38-76.602-152.155C10.74 658.443 0 598.013 0 539.509c0-67.017 14.481-124.818 43.486-173.255 22.796-38.906 53.122-69.596 91.078-92.126 37.955-22.53 78.967-34.012 123.132-34.746 24.166 0 55.856 7.475 95.238 22.166 39.27 14.74 64.485 22.215 75.54 22.215 8.266 0 36.277-8.74 83.764-26.166 44.906-16.16 82.806-22.85 113.854-20.215 84.133 6.79 147.341 39.955 189.377 99.707-75.245 45.59-112.466 109.447-111.725 191.364.68 63.807 23.827 116.904 69.319 159.063 20.617 19.568 43.64 34.69 69.257 45.431-5.555 16.11-11.42 31.542-17.654 46.357zM631.71 20.006c0 50.011-18.27 96.707-54.69 139.928-43.949 51.38-97.108 81.071-154.754 76.386-.735-6-1.16-12.314-1.16-18.95 0-48.01 20.9-99.392 58.016-141.403 18.53-21.271 42.098-38.957 70.677-53.066C578.316 9.002 605.29 1.316 630.66 0c.74 6.686 1.05 13.372 1.05 20.005z"
            fill="#fff"
          />
          
    
        </svg>
      </div>
      <div
        class="css-0"
      >
        <button
          aria-label="power-button"
          class="chakra-button css-vryt08"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="1.5em"
            viewBox="0 0 16 16"
            width="1.5em"
          >
            <path
              d="M7.5 1v7h1V1h-1z"
            />
            <path
              d="M3 8.812a4.999 4.999 0 012.578-4.375l-.485-.874A6 6 0 1011 3.616l-.501.865A5 5 0 113 8.812z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RouterProvider should render for powering 1`] = `
<div>
  <div
    aria-label="static-host-screen"
    class="css-0"
  >
    <div
      aria-label="powering-screen"
      class="css-vx62js"
    >
      <div
        style="color: rgb(255, 255, 255);"
      >
        <svg
          height="100"
          viewBox="0 0 842 1000"
          width="84"
          xmlns="http://www.w3.org/2000/svg"
        >
          
      
          <path
            d="M824.666 779.304c-15.123 34.937-33.023 67.096-53.763 96.663-28.271 40.308-51.419 68.208-69.258 83.702-27.653 25.43-57.282 38.455-89.01 39.196-22.776 0-50.245-6.481-82.219-19.63-32.08-13.085-61.56-19.566-88.516-19.566-28.27 0-58.59 6.48-91.022 19.567-32.48 13.148-58.646 20-78.652 20.678-30.425 1.296-60.75-12.098-91.022-40.245-19.32-16.852-43.486-45.74-72.436-86.665-31.06-43.702-56.597-94.38-76.602-152.155C10.74 658.443 0 598.013 0 539.509c0-67.017 14.481-124.818 43.486-173.255 22.796-38.906 53.122-69.596 91.078-92.126 37.955-22.53 78.967-34.012 123.132-34.746 24.166 0 55.856 7.475 95.238 22.166 39.27 14.74 64.485 22.215 75.54 22.215 8.266 0 36.277-8.74 83.764-26.166 44.906-16.16 82.806-22.85 113.854-20.215 84.133 6.79 147.341 39.955 189.377 99.707-75.245 45.59-112.466 109.447-111.725 191.364.68 63.807 23.827 116.904 69.319 159.063 20.617 19.568 43.64 34.69 69.257 45.431-5.555 16.11-11.42 31.542-17.654 46.357zM631.71 20.006c0 50.011-18.27 96.707-54.69 139.928-43.949 51.38-97.108 81.071-154.754 76.386-.735-6-1.16-12.314-1.16-18.95 0-48.01 20.9-99.392 58.016-141.403 18.53-21.271 42.098-38.957 70.677-53.066C578.316 9.002 605.29 1.316 630.66 0c.74 6.686 1.05 13.372 1.05 20.005z"
            fill="#fff"
          />
          
    
        </svg>
      </div>
      <div
        class="css-1hskriy"
      >
        <div
          class="css-1rb7w31"
        >
          <div
            aria-label="powering-progress"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="1"
            class="css-1flnf87"
            role="progressbar"
            style="width: 1%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RouterProvider should render mac for login 1`] = `
<div>
  <div
    style="filter: brightness(1);"
  >
    <div
      aria-label="mac"
      style="transition: all 0.4s ease-in-out;"
    >
      <div
        aria-label="home"
        class="css-1jmej02"
      >
        <div
          class="css-1q3b9iq"
        >
          <img
            aria-label="wallpaper-component-with-wallpaper7"
            class="chakra-image css-uwwqev"
            loading="lazy"
            src=""
          />
        </div>
        <div
          class="css-1qqbak8"
        >
          <div
            class="chakra-button__group css-y7v311"
            data-orientation="horizontal"
            role="group"
          >
            <button
              aria-controls="menu-list-:r3:"
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="apple-top-bar-button"
              class="chakra-menu__menu-button css-10l0d22"
              id="menu-button-:r3:"
            >
              <span
                class="css-xl71ch"
              >
                <svg
                  color="#000000"
                  fill="currentColor"
                  height="1.5em"
                  viewBox="0 0 1024 1024"
                  width="1.5em"
                >
                  <path
                    d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-105.1-305c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="css-0"
              style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
            >
              <div
                aria-orientation="vertical"
                class="chakra-menu__menu-list css-f6jf1x"
                id="menu-list-:r3:"
                role="menu"
                style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
                tabindex="-1"
              >
                <button
                  aria-label="about-this-mac"
                  class="chakra-menu__menuitem css-1r6ihsa"
                  data-index="0"
                  id="menu-list-:r3:-menuitem-:r4:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  About This Mac
                </button>
                <hr
                  aria-orientation="horizontal"
                  class="chakra-menu__divider css-1fmk8qx"
                />
                <button
                  aria-label="system-settings"
                  class="chakra-menu__menuitem css-1r6ihsa"
                  data-index="1"
                  id="menu-list-:r3:-menuitem-:r5:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  System Settings...
                </button>
                <button
                  aria-label="app-store"
                  class="chakra-menu__menuitem css-1r6ihsa"
                  data-index="2"
                  id="menu-list-:r3:-menuitem-:r6:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  App Store...
                </button>
                <hr
                  aria-orientation="horizontal"
                  class="chakra-menu__divider css-1fmk8qx"
                />
                <button
                  aria-label="recent-items"
                  class="chakra-menu__menuitem css-1r6ihsa"
                  data-index="3"
                  id="menu-list-:r3:-menuitem-:r7:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    style="pointer-events: none; flex: 1;"
                  >
                    Recent Items
                  </span>
                  <span
                    class="chakra-menu__command css-8dknqd"
                  >
                    &gt;
                  </span>
                </button>
                <hr
                  aria-orientation="horizontal"
                  class="chakra-menu__divider css-1fmk8qx"
                />
                <button
                  aria-label="force-quit"
                  class="chakra-menu__menuitem css-1r6ihsa"
                  data-index="4"
                  id="menu-list-:r3:-menuitem-:r8:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  Force Quit...
                </button>
                <hr
                  aria-orientation="horizontal"
                  class="chakra-menu__divider css-1fmk8qx"
                />
                <button
                  aria-label="sleep"
                  class="chakra-menu__menuitem css-1r6ihsa"
                  data-index="5"
                  id="menu-list-:r3:-menuitem-:r9:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  Sleep
                </button>
                <button
                  aria-label="restart"
                  class="chakra-menu__menuitem css-1r6ihsa"
                  data-index="6"
                  id="menu-list-:r3:-menuitem-:ra:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  Restart...
                </button>
                <button
                  aria-label="shutDown"
                  class="chakra-menu__menuitem css-1r6ihsa"
                  data-index="7"
                  id="menu-list-:r3:-menuitem-:rb:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  Shut Down...
                </button>
                <hr
                  aria-orientation="horizontal"
                  class="chakra-menu__divider css-1fmk8qx"
                />
                <button
                  aria-label="lock-screen"
                  class="chakra-menu__menuitem css-1r6ihsa"
                  data-index="8"
                  id="menu-list-:r3:-menuitem-:rc:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  Lock Screen
                </button>
                <button
                  aria-label="logout"
                  class="chakra-menu__menuitem css-1r6ihsa"
                  data-index="9"
                  id="menu-list-:r3:-menuitem-:rd:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  Log out {{userName: string}}...
                </button>
              </div>
            </div>
          </div>
          <div
            class="chakra-button__group css-idd0r2"
            data-orientation="horizontal"
            role="group"
          >
            <button
              aria-controls="menu-list-:rf:"
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="monitor-top-bar-button"
              class="chakra-menu__menu-button css-10l0d22"
              id="menu-button-:rf:"
            >
              <span
                class="css-xl71ch"
              >
                <svg
                  color="#000000"
                  fill="currentColor"
                  height="1.5em"
                  viewBox="0 0 24 24"
                  width="1.5em"
                >
                  <path
                    d="M21 16H3V4h18m0-2H3c-1.11 0-2 .89-2 2v12a2 2 0 002 2h7v2H8v2h8v-2h-2v-2h7a2 2 0 002-2V4a2 2 0 00-2-2z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="css-0"
              style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
            >
              <div
                aria-orientation="vertical"
                class="chakra-menu__menu-list css-f6jf1x"
                id="menu-list-:rf:"
                role="menu"
                style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
                tabindex="-1"
              >
                <div
                  class="css-1uhz9qn"
                >
                  <p
                    class="chakra-text css-1jueml0"
                  >
                    Display
                  </p>
                  <div
                    class="chakra-slider css-1j9oeic"
                    style="position: relative; user-select: none; outline: 0; padding-top: 0px; padding-bottom: 0px;"
                    tabindex="-1"
                  >
                    <div
                      class="chakra-slider__track css-q9xlwy"
                      id="slider-track-:rg:"
                      style="position: absolute; top: 50%; transform: translateY(-50%); width: 100%;"
                    >
                      <div
                        class="chakra-slider__filled-track css-4fiyi6"
                        style="position: absolute; top: 50%; transform: translateY(-50%); width: 100%; left: 0%;"
                      >
                        <svg
                          color="black"
                          fill="currentColor"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <path
                            d="M12 8a4 4 0 11-8 0 4 4 0 018 0zM8 0a.5.5 0 01.5.5v2a.5.5 0 01-1 0v-2A.5.5 0 018 0zm0 13a.5.5 0 01.5.5v2a.5.5 0 01-1 0v-2A.5.5 0 018 13zm8-5a.5.5 0 01-.5.5h-2a.5.5 0 010-1h2a.5.5 0 01.5.5zM3 8a.5.5 0 01-.5.5h-2a.5.5 0 010-1h2A.5.5 0 013 8zm10.657-5.657a.5.5 0 010 .707l-1.414 1.415a.5.5 0 11-.707-.708l1.414-1.414a.5.5 0 01.707 0zm-9.193 9.193a.5.5 0 010 .707L3.05 13.657a.5.5 0 01-.707-.707l1.414-1.414a.5.5 0 01.707 0zm9.193 2.121a.5.5 0 01-.707 0l-1.414-1.414a.5.5 0 01.707-.707l1.414 1.414a.5.5 0 010 .707zM4.464 4.465a.5.5 0 01-.707 0L2.343 3.05a.5.5 0 11.707-.707l1.414 1.414a.5.5 0 010 .708z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      aria-label="slider-ex-1"
                      aria-orientation="horizontal"
                      aria-valuemax="100"
                      aria-valuemin="0"
                      aria-valuenow="100"
                      class="chakra-slider__thumb css-1om1vhp"
                      id="slider-thumb-:rg:"
                      role="slider"
                      style="position: absolute; user-select: none; left: calc(100% - 0px);"
                      tabindex="0"
                    />
                    <input
                      type="hidden"
                      value="100"
                    />
                  </div>
                </div>
                <div
                  class="chakra-stack css-jqtdn9"
                >
                  <div
                    class="css-1voambi"
                  >
                    <button
                      aria-label="increase"
                      class="chakra-button css-3szl26"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        color="white"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 16a4 4 0 000-8v8z"
                          fill="currentColor"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm0 2v4a4 4 0 100 8v4a8 8 0 100-16z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                    <p
                      class="chakra-text css-7qcwdg"
                    >
                      Dark mode
                    </p>
                    <p
                      class="chakra-text css-lla7mv"
                    >
                      Off
                    </p>
                  </div>
                  <div
                    class="css-1voambi"
                  >
                    <button
                      aria-label="increase"
                      class="chakra-button css-3szl26"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        color="white"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 16a4 4 0 000-8v8z"
                          fill="currentColor"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm0 2v4a4 4 0 100 8v4a8 8 0 100-16z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                    <p
                      class="chakra-text css-7qcwdg"
                    >
                      Night Shift
                    </p>
                    <p
                      class="chakra-text css-lla7mv"
                    >
                      Off
                    </p>
                  </div>
                  <div
                    class="css-1voambi"
                  >
                    <button
                      aria-label="increase"
                      class="chakra-button css-3szl26"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        color="white"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 16 16"
                      >
                        <path
                          d="M12 8a4 4 0 11-8 0 4 4 0 018 0zM8 0a.5.5 0 01.5.5v2a.5.5 0 01-1 0v-2A.5.5 0 018 0zm0 13a.5.5 0 01.5.5v2a.5.5 0 01-1 0v-2A.5.5 0 018 13zm8-5a.5.5 0 01-.5.5h-2a.5.5 0 010-1h2a.5.5 0 01.5.5zM3 8a.5.5 0 01-.5.5h-2a.5.5 0 010-1h2A.5.5 0 013 8zm10.657-5.657a.5.5 0 010 .707l-1.414 1.415a.5.5 0 11-.707-.708l1.414-1.414a.5.5 0 01.707 0zm-9.193 9.193a.5.5 0 010 .707L3.05 13.657a.5.5 0 01-.707-.707l1.414-1.414a.5.5 0 01.707 0zm9.193 2.121a.5.5 0 01-.707 0l-1.414-1.414a.5.5 0 01.707-.707l1.414 1.414a.5.5 0 010 .707zM4.464 4.465a.5.5 0 01-.707 0L2.343 3.05a.5.5 0 11.707-.707l1.414 1.414a.5.5 0 010 .708z"
                        />
                      </svg>
                    </button>
                    <p
                      class="chakra-text css-7qcwdg"
                    >
                      True Tone
                    </p>
                    <p
                      class="chakra-text css-lla7mv"
                    >
                      Off
                    </p>
                  </div>
                </div>
                <hr
                  aria-orientation="horizontal"
                  class="chakra-menu__divider css-n5p1w9"
                />
                <button
                  aria-label="new-tab"
                  class="chakra-menu__menuitem css-n7rl60"
                  data-index="0"
                  id="menu-list-:rf:-menuitem-:rh:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  Display settings...
                </button>
              </div>
            </div>
            <button
              aria-controls="menu-list-:rj:"
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="user-top-bar-button"
              class="chakra-menu__menu-button css-10l0d22"
              id="menu-button-:rj:"
            >
              <span
                class="css-xl71ch"
              >
                <p
                  class="chakra-text css-0"
                >
                  Amit Raikwar
                </p>
              </span>
            </button>
            <div
              class="css-0"
              style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
            >
              <div
                aria-orientation="vertical"
                class="chakra-menu__menu-list css-f6jf1x"
                id="menu-list-:rj:"
                role="menu"
                style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
                tabindex="-1"
              >
                <div
                  class="css-1hdcak2"
                >
                  <img
                    alt="Profile"
                    class="chakra-image css-1khlcnb"
                    loading="lazy"
                    src="https://avatars.githubusercontent.com/u/104697219?s=400&u=7ecc539c268755cfe0409ca5863773bb726387ba&v=4"
                  />
                  <p
                    class="chakra-text css-gsdmxf"
                  >
                    Amit Raikwar
                  </p>
                </div>
                <hr
                  aria-orientation="horizontal"
                  class="chakra-menu__divider css-1fmk8qx"
                />
                <button
                  aria-label="new-tab"
                  class="chakra-menu__menuitem css-n7rl60"
                  data-index="0"
                  id="menu-list-:rj:-menuitem-:rk:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  Login window...
                </button>
                <hr
                  aria-orientation="horizontal"
                  class="chakra-menu__divider css-1fmk8qx"
                />
                <button
                  aria-label="new-tab"
                  class="chakra-menu__menuitem css-n7rl60"
                  data-index="1"
                  id="menu-list-:rj:-menuitem-:rl:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  Users & group settings...
                </button>
              </div>
            </div>
            <button
              aria-controls="menu-list-:rn:"
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="battery-top-bar-button"
              class="chakra-menu__menu-button css-10l0d22"
              id="menu-button-:rn:"
            >
              <span
                class="css-xl71ch"
              >
                <svg
                  color="#000000"
                  fill="currentColor"
                  height="2em"
                  viewBox="0 0 16 16"
                  width="2em"
                >
                  <path
                    d="M2 6h6.7v4H2V6z"
                  />
                  <path
                    d="M2 4a2 2 0 00-2 2v4a2 2 0 002 2h10a2 2 0 002-2V6a2 2 0 00-2-2H2zm10 1a1 1 0 011 1v4a1 1 0 01-1 1H2a1 1 0 01-1-1V6a1 1 0 011-1h10zm4 3a1.5 1.5 0 01-1.5 1.5v-3A1.5 1.5 0 0116 8z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="css-0"
              style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
            >
              <div
                aria-orientation="vertical"
                class="chakra-menu__menu-list css-f6jf1x"
                id="menu-list-:rn:"
                role="menu"
                style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
                tabindex="-1"
              >
                <div
                  class="css-ucdv1m"
                >
                  <p
                    class="chakra-text css-16c42s3"
                  >
                    Battery
                  </p>
                  <p
                    class="chakra-text css-1lj023j"
                  >
                    67%
                  </p>
                </div>
                <hr
                  aria-orientation="horizontal"
                  class="chakra-menu__divider css-n5p1w9"
                />
                <button
                  aria-label="new-tab"
                  class="chakra-menu__menuitem css-n7rl60"
                  data-index="0"
                  id="menu-list-:rn:-menuitem-:ro:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  Battery settings...
                </button>
              </div>
            </div>
            <button
              aria-controls="menu-list-:rq:"
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="wifi-top-bar-button"
              class="chakra-menu__menu-button css-10l0d22"
              id="menu-button-:rq:"
            >
              <span
                class="css-xl71ch"
              >
                <svg
                  color="#000000"
                  fill="currentColor"
                  height="1.5em"
                  viewBox="0 0 24 24"
                  width="1.5em"
                >
                  <path
                    d="M12 21l3.6-4.8c-1-.75-2.25-1.2-3.6-1.2s-2.6.45-3.6 1.2L12 21m0-18C7.95 3 4.21 4.34 1.2 6.6L3 9c2.5-1.88 5.62-3 9-3s6.5 1.12 9 3l1.8-2.4C19.79 4.34 16.05 3 12 3m0 6c-2.7 0-5.19.89-7.2 2.4l1.8 2.4C8.1 12.67 9.97 12 12 12c2.03 0 3.9.67 5.4 1.8l1.8-2.4C17.19 9.89 14.7 9 12 9z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="css-0"
              style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
            >
              <div
                aria-orientation="vertical"
                class="chakra-menu__menu-list css-f6jf1x"
                id="menu-list-:rq:"
                role="menu"
                style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
                tabindex="-1"
              >
                <div
                  class="css-o3czpp"
                >
                  <p
                    class="chakra-text css-1c1e297"
                  >
                    Wi-Fi
                  </p>
                  <label
                    class="chakra-switch css-16pgy8f"
                  >
                    <input
                      class="chakra-switch__input"
                      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                      type="checkbox"
                      value=""
                    />
                    <span
                      aria-hidden="true"
                      class="chakra-switch__track css-14qxnv8"
                    >
                      <span
                        class="chakra-switch__thumb css-0"
                      />
                    </span>
                  </label>
                </div>
                <button
                  aria-label="wifi-weak-security"
                  class="chakra-menu__menuitem css-n7rl60"
                  data-index="0"
                  id="menu-list-:rq:-menuitem-:rr:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  Weak Security (WPA)
                </button>
                <hr
                  aria-orientation="horizontal"
                  class="chakra-menu__divider css-1fmk8qx"
                />
                <button
                  aria-label="wifi-1"
                  class="chakra-button css-vgfzey"
                  type="button"
                >
                  <span
                    class="chakra-button__icon css-1wh2kri"
                  >
                    <svg
                      aria-hidden="true"
                      color="#000000"
                      fill="currentColor"
                      focusable="false"
                      height="1.5em"
                      style="background-color: rgba(240, 240, 240, 0.435); padding: 0.2em; border-radius: 50%;"
                      viewBox="0 0 24 24"
                      width="1.5em"
                    >
                      <path
                        d="M12 21l3.6-4.8c-1-.75-2.25-1.2-3.6-1.2s-2.6.45-3.6 1.2L12 21m0-18C7.95 3 4.21 4.34 1.2 6.6L3 9c2.5-1.88 5.62-3 9-3s6.5 1.12 9 3l1.8-2.4C19.79 4.34 16.05 3 12 3m0 6c-2.7 0-5.19.89-7.2 2.4l1.8 2.4C8.1 12.67 9.97 12 12 12c2.03 0 3.9.67 5.4 1.8l1.8-2.4C17.19 9.89 14.7 9 12 9z"
                      />
                    </svg>
                  </span>
                  Wi-Fi 1
                </button>
                <button
                  aria-label="wifi-1"
                  class="chakra-button css-qkcrce"
                  type="button"
                >
                  <span
                    class="chakra-button__icon css-1wh2kri"
                  >
                    <svg
                      aria-hidden="true"
                      color="#000000"
                      fill="currentColor"
                      focusable="false"
                      height="1.5em"
                      style="background-color: rgba(240, 240, 240, 0.435); padding: 0.2em; border-radius: 50%;"
                      viewBox="0 0 24 24"
                      width="1.5em"
                    >
                      <path
                        d="M12 21l3.6-4.8c-1-.75-2.25-1.2-3.6-1.2s-2.6.45-3.6 1.2L12 21m0-18C7.95 3 4.21 4.34 1.2 6.6L3 9c2.5-1.88 5.62-3 9-3s6.5 1.12 9 3l1.8-2.4C19.79 4.34 16.05 3 12 3m0 6c-2.7 0-5.19.89-7.2 2.4l1.8 2.4C8.1 12.67 9.97 12 12 12c2.03 0 3.9.67 5.4 1.8l1.8-2.4C17.19 9.89 14.7 9 12 9z"
                      />
                    </svg>
                  </span>
                  Wi-Fi 2
                </button>
                <hr
                  aria-orientation="horizontal"
                  class="chakra-menu__divider css-1fmk8qx"
                />
                <button
                  aria-label="new-tab"
                  class="chakra-menu__menuitem css-n7rl60"
                  data-index="1"
                  id="menu-list-:rq:-menuitem-:rs:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    style="pointer-events: none; flex: 1;"
                  >
                    Other Network
                  </span>
                  <span
                    class="chakra-menu__command css-8dknqd"
                  >
                    &gt;
                  </span>
                </button>
                <hr
                  aria-orientation="horizontal"
                  class="chakra-menu__divider css-1fmk8qx"
                />
                <button
                  aria-label="new-tab"
                  class="chakra-menu__menuitem css-n7rl60"
                  data-index="2"
                  id="menu-list-:rq:-menuitem-:rt:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  Wi-Fi settings...
                </button>
              </div>
            </div>
            <button
              aria-label="search-top-bar-button"
              class="chakra-button css-1h066r4"
              type="button"
            >
              <svg
                aria-hidden="true"
                color="#000000"
                fill="currentColor"
                focusable="false"
                height="1.2em"
                viewBox="0 0 24 24"
                width="1.2em"
              >
                <path
                  d="M10 18a7.952 7.952 0 004.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0018 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"
                />
              </svg>
            </button>
            <button
              aria-controls="menu-list-:rv:"
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="settings-top-bar-button"
              class="chakra-menu__menu-button css-10l0d22"
              id="menu-button-:rv:"
            >
              <span
                class="css-xl71ch"
              >
                <svg
                  color="#000000"
                  fill="currentColor"
                  height="1.5em"
                  viewBox="0 0 24 24"
                  width="1.5em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.75 12.75h1.5a.75.75 0 0 0 0-1.5h-1.5a.75.75 0 0 0 0 1.5ZM12 6a.75.75 0 0 1 .75-.75h7.5a.75.75 0 0 1 0 1.5h-7.5A.75.75 0 0 1 12 6ZM12 18a.75.75 0 0 1 .75-.75h7.5a.75.75 0 0 1 0 1.5h-7.5A.75.75 0 0 1 12 18ZM3.75 6.75h1.5a.75.75 0 1 0 0-1.5h-1.5a.75.75 0 0 0 0 1.5ZM5.25 18.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 0 1.5ZM3 12a.75.75 0 0 1 .75-.75h7.5a.75.75 0 0 1 0 1.5h-7.5A.75.75 0 0 1 3 12ZM9 3.75a2.25 2.25 0 1 0 0 4.5 2.25 2.25 0 0 0 0-4.5ZM12.75 12a2.25 2.25 0 1 1 4.5 0 2.25 2.25 0 0 1-4.5 0ZM9 15.75a2.25 2.25 0 1 0 0 4.5 2.25 2.25 0 0 0 0-4.5Z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="css-0"
              style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
            >
              <div
                aria-orientation="vertical"
                class="chakra-menu__menu-list css-f6jf1x"
                id="menu-list-:rv:"
                role="menu"
                style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
                tabindex="-1"
              >
                <div
                  class="css-k008qs"
                >
                  <div
                    class="css-1pidzr7"
                  >
                    <div
                      class="chakra-stack css-1igwmid"
                    >
                      <div
                        class="chakra-stack css-tl3ftk"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-controls="menu-list-:r12:"
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="date-time-top-bar-button"
              class="chakra-menu__menu-button css-10l0d22"
              id="menu-button-:r12:"
            >
              <span
                class="css-xl71ch"
              >
                <p
                  class="chakra-text css-0"
                >
                  Thu May 14 11:01 AM
                </p>
              </span>
            </button>
          </div>
        </div>
        <div
          class="react-draggable react-resizable"
          style="transition: all 0s; transform: translate(0px, 28px)translate(600px,150px); width: 700px; height: 500px;"
        >
          <div
            class="css-exz6no"
          >
            <div
              class="handle css-1q7gku6"
            >
              <div
                class="css-bl229y"
              />
              <div
                class="css-6qqns1"
              />
              <div
                class="css-2fxb6m"
              />
              <div
                class="css-1bc9bee"
              />
            </div>
            <div
              class="css-1qx9vnh"
            >
              <div
                aria-label="spotify"
                class="css-uwwqev"
              >
                <div
                  class="css-yecknf"
                >
                  <button
                    aria-label="back"
                    class="chakra-button css-1kxr5pj"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      color="white"
                      fill="currentColor"
                      focusable="false"
                      height="24"
                      viewBox="0 0 512 512"
                      width="24"
                    >
                      <path
                        d="M249.38 336L170 256l79.38-80M181.03 256H342"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="32"
                      />
                      <path
                        d="M448 256c0-106-86-192-192-192S64 150 64 256s86 192 192 192 192-86 192-192z"
                        fill="none"
                        stroke="currentColor"
                        stroke-miterlimit="10"
                        stroke-width="32"
                      />
                    </svg>
                  </button>
                  A.R. Rahman
                </div>
                <iframe
                  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                  height="100%"
                  loading="lazy"
                  src="https://open.spotify.com/embed/artist/1mYsTxnqsietFxj1OgoGbG?utm_source=generator"
                  title="A.R. Rahman"
                  width="100%"
                />
              </div>
            </div>
          </div>
          <span
            class="react-resizable-handle react-resizable-handle-se"
          />
        </div>
        <div
          aria-label="bottom-bar"
          class="css-c60n9a"
        >
          <div
            class="css-ax28gb"
            data-rbd-droppable-context-id="0"
            data-rbd-droppable-id="droppable-list"
          >
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="css-dvxtzn"
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="Finder"
              data-rbd-draggable-context-id="0"
              data-rbd-draggable-id="Finder"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <img
                alt="Finder"
                class="chakra-image css-h67rfo"
                loading="lazy"
                src=""
              />
              <div
                class="css-1vukhon"
              />
            </div>
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="css-dvxtzn"
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="Chrome"
              data-rbd-draggable-context-id="0"
              data-rbd-draggable-id="Chrome"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <img
                alt="Chrome"
                class="chakra-image css-h67rfo"
                loading="lazy"
                src=""
              />
              <div
                class="css-1vukhon"
              />
            </div>
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="css-dvxtzn"
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="VsCode"
              data-rbd-draggable-context-id="0"
              data-rbd-draggable-id="VsCode"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <img
                alt="VsCode"
                class="chakra-image css-h67rfo"
                loading="lazy"
                src=""
              />
              <div
                class="css-1vukhon"
              />
            </div>
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="css-dvxtzn"
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="Terminal"
              data-rbd-draggable-context-id="0"
              data-rbd-draggable-id="Terminal"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <img
                alt="Terminal"
                class="chakra-image css-h67rfo"
                loading="lazy"
                src=""
              />
              <div
                class="css-1vukhon"
              />
            </div>
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="css-dvxtzn"
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="Spotify"
              data-rbd-draggable-context-id="0"
              data-rbd-draggable-id="Spotify"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <img
                alt="Spotify"
                class="chakra-image css-h67rfo"
                loading="lazy"
                src=""
              />
              <div
                class="css-1vukhon"
              />
            </div>
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="css-dvxtzn"
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="Github"
              data-rbd-draggable-context-id="0"
              data-rbd-draggable-id="Github"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <img
                alt="Github"
                class="chakra-image css-h67rfo"
                loading="lazy"
                src=""
              />
              <div
                class="css-1vukhon"
              />
            </div>
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="css-dvxtzn"
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="Settings"
              data-rbd-draggable-context-id="0"
              data-rbd-draggable-id="Settings"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <img
                alt="Settings"
                class="chakra-image css-h67rfo"
                loading="lazy"
                src=""
              />
              <div
                class="css-1vukhon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
